--- a/source/css/modules/student_life.scss
+++ b/source/css/modules/student_life.scss
@@ -11,15 +11,19 @@
 
 		&:first-child {
 
+background-size: cover;
+
 			position: relative;
 			@include triangle(2em, white, right, 25%);
 			min-height: 100%;
-			background: url("../../images/students.jpg") no-repeat center center/cover;
+			// background: url("../../images/students.jpg") no-repeat center center/cover;
 
 		}
 
 		&:last-child {
 			padding-left: 3em;
+			padding-bottom: 3em;
+
 		}
 	}
 }
