--- a/source/templates/_pages/index.hbs
+++ b/source/templates/_pages/index.hbs
@@ -1,8 +1,9 @@
-
+<main class="main" role="main">
 {{>nav}}
+{{>slideshow}}
 {{>Home_Hero}}
 
-<main class="main" role="main">
+
 <!-- {{>icon_grid}} -->
 {{>this_is_xula}}
     {{>part_of_process section_part_of_process.Alert}}
@@ -19,17 +20,15 @@
 {{>cutout cutout.HnE}}
 {{>Calender calender.Calender}}
 {{>visit_apply_request}}
-</main>
 
 
-<footer role="contentinfo">
-  <p>&copy; 2015 Company Name</p>
-</footer>
+
 {{>footer}}
 
-
+</main>
 <script data-main="js/main" src="js/libs/requirejs/require.js"></script>
 <script>
+
   // define settings for require
   define('settings', {
   });
