--- a/source/templates/_partials/_modules/cutout.hbs
+++ b/source/templates/_partials/_modules/cutout.hbs
@@ -1,13 +1,13 @@
-<section class="cutout {{[Class]}}">
+<div class="cutout {{[Class]}}">
 
 <div class="container">
 
 	<div class="wrap">
 
 		    {{#if Text}}
-			<h1 class="heading-3 georgia">   {{ Text }} </h1>
+			<h1 class="heading-5 georgia">   {{ Text }} </h1>
 			{{/if}}
-			<h2 class="heading-1"> <strong>
+			<h2 class="heading-2"> <strong>
 				  {{ Title }} </strong> </h2>
 					{{#if button}}
 					{{>button button}}
@@ -20,4 +20,4 @@
 
   </div>
 </div>
-</section>
+</div>
