--- a/source/templates/_partials/_modules/footer.hbs
+++ b/source/templates/_partials/_modules/footer.hbs
@@ -17,9 +17,9 @@
 					<div class="col-1-2">
 				<img class="logo" src="../images/logo.svg" />
 			</div>
-			<div class="col-1-2">
+			<!-- <div class="col-1-2">
 				<h4 class="georgia"> Leave Ready.</h4>
-			</div>
+			</div> -->
 		</div>
 			<div class="bottomnav grid footer-navigation">
 
@@ -119,36 +119,41 @@
 			</div>
 
 		</footer>
-
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
+<!-- <script src="/js/modules/search_nav.js"></script> -->
+<!-- <script src="/js/modules/slider.js"></script> -->
 <script type="text/javascript">
 
-	$(document).ready(function() {
-  //Set the carousel options
-  $('#quote-carousel').carousel({
-    pauseOnHover: true,
-    interval: 6000,
-  });
-    });
-</script>
-<script>
-var acc = document.getElementsByClassName("accordion");
-var i;
+	// $(document).ready(function() {
+  // //Set the carousel options
+  // $('#quote-carousel').carousel({
+  //   pauseOnHover: true,
+  //   interval: 6000,
+  // });
+  //   });
 
-for (i = 0; i < acc.length; i++) {
-  acc[i].onclick = function() {
-    this.classList.toggle("active");
-    var panel = this.nextElementSibling;
-    if (panel.style.maxHeight){
-      panel.style.maxHeight = null;
-    } else {
-      panel.style.maxHeight = panel.scrollHeight + "px";
-    }
-  }
-}
+// $(function(){
+// 	$('#abay').accordion();
+//
+// });
+//
+// var acc = document.getElementsByClassName("accordion");
+// var i;
+//
+// for (i = 0; i < acc.length; i++) {
+//   acc[i].onclick = function() {
+//     this.classList.toggle("active");
+//     var panel = this.nextElementSibling;
+//     if (panel.style.maxHeight){
+//       panel.style.maxHeight = null;
+//     } else {
+//       panel.style.maxHeight = panel.scrollHeight + "px";
+//     }
+//   }
+// }
 
 </script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script src="/js/custom.js"></script>
-		<script src="/js/modules/slider.js"></script>
+
 	<!-- <script src="//code.jquery.com/jquery-1.12.4.js"></script>
 <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
