--- a/source/templates/_partials/_modules/headline.hbs
+++ b/source/templates/_partials/_modules/headline.hbs
@@ -3,8 +3,8 @@
 
     {{#each Headline}}
 
-          <h1 class="heading-2"> {{ Title}}</h1>
-          <h2 class="heading-1"><strong>{{ Text }}</strong></h2>
+          <h1> {{ Title}} <span> {{Text}}</h1>
+          <!-- <h2 class="heading-1"><strong>{{ Text }}</strong></h2> -->
     {{/each}}
 
 </div>
