--- a/source/templates/_partials/_modules/info_box.hbs
+++ b/source/templates/_partials/_modules/info_box.hbs
@@ -1,14 +1,14 @@
 <section class="info_box grid">
 
 	<div class="col-1-2">
-		<h2 class="heading-3">Information for <span>Freshmen</span></h2>
+		<h2 class="heading-5">Information for Freshmen</h2>
 		<p>
 			We can help make your move to college life as smooth as possible.
 		</p>
 		<a href="#" class="button-ghost">Get Excited</a>
 	</div>
 	<div class="col-1-2">
-		<h2 class="heading-3">Information for <span>Parents</span></h2>
+		<h2 class="heading-5">Information for Parents</h2>
 		<p>
 			As your kids leave the nest, we’ll ease their transition and your mind.
 		</p>
