--- a/source/templates/_partials/_modules/main_nav.hbs
+++ b/source/templates/_partials/_modules/main_nav.hbs
@@ -1,10 +1,12 @@
 <!-- <div class="container">
  --><div class="main_nav">
 
-	<img class="logo" src="../images/logo.svg"/>
-
+	<!-- <img src="../images/logo/horizontal-logo-reverse.svg"/>
+<img class="logo" src="../images/logo/horizontal-logo-reverse.svg"/> -->
 	<nav class="menu">
 		<ul class="georgia">
+			<!-- <li>	<img class="logo" src="../images/logo/horizontal-logo-reverse.svg"/>
+</li> -->
 			<li><a href="#">About</a></li>
 			<li><a href="#">Academics</a></li>
 			<li><a href="#">Admissions</a></li>
