--- a/source/templates/_partials/_modules/mobile_nav.hbs
+++ b/source/templates/_partials/_modules/mobile_nav.hbs
@@ -1,8 +1,12 @@
 <div class="mobile_tablet_menu">
-		<img class="logo" src="../images/logo.svg"/>
-	<div class="icon-menu"> </div>
-	<div class="icon-search"><a href="javascript:;" class="toggle-search"><i class="fa fa-search" aria-hidden="true"></i></a></div>
-
+	<!-- <div class="tester"> -->
+	<div class="icon">
+		<div class="icon--menu"> </div>
+	</div>
+	<div class="icon">
+		<div class="icon--search"><a href="javascript:;" class="toggle-search"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+	</div>
+<!-- </div> -->
 <div class="navigator">
 	<nav class="mobile_menu">
 			<ul class="georgia">
