--- a/source/templates/_partials/_modules/quote_slider.hbs
+++ b/source/templates/_partials/_modules/quote_slider.hbs
@@ -1,5 +1,9 @@
 
+
 <section class="slider">
+	<div class="quote_img">
+	<img src="../images/icons/quote.svg">
+</div>
 	<div class="slide-viewer">
 		<div class="slide-group">
 
@@ -8,7 +12,8 @@
 						<h1 class="georgia heading-4">
 							{{Quote}}
 </h1>
-						<img class="icon" src="{{ Image.src }}" alt"{{ Image.alt }}"/>
+<br>
+<h2 class="heading-6"> {{Name}}</h2>
 					</div>
 			    {{/each}}
 		</div>
