--- a/source/templates/_partials/_modules/student_life.hbs
+++ b/source/templates/_partials/_modules/student_life.hbs
@@ -1,6 +1,6 @@
 <section class="student-life grid">
-<div class="col-1-2">
-
+<div class="col-1-2 {{BackgroundImage.[Class Name]}}">
+  {{>backgroundimage this.BackgroundImage}}
 </div>
 <div class="col-1-2">
 	{{>icon_grid [Icon_Grid]}}
