--- a/source/css/defaults/_base-global.scss
+++ b/source/css/defaults/_base-global.scss
@@ -83,9 +83,14 @@ a {
 	width: 90%;
 	max-width: 1440px;
 	margin: 0 auto;
+
 	display: flex;
 	align-items: flex-start;
 	flex-flow: row wrap;
+
+}
+.padding{
+    padding: 2em 0;
 }
 .fullwidth {
 	display: flex;
