--- a/source/css/defaults/_grid.scss
+++ b/source/css/defaults/_grid.scss
@@ -36,6 +36,12 @@ $pad: 20px;
 
 .col-1-2 {
 	width: 50%;
+  @include mq($S){
+    width: 100%;
+  }
+  @include mq($M){
+    width: 50%;
+  }
 }
 
 .col-1-4 {
