--- a/source/css/mixins/_mixins.scss
+++ b/source/css/mixins/_mixins.scss
@@ -9,9 +9,14 @@
 //   EXAMPLE: use the large breakpoint media query
 //     @include mq($L) {}
 
+
+.uppercase{
+	text-transform: uppercase;
+}
+
 .hidden {
 	display: none !important;
-	visibility: hidden;
+			visibility: hidden;
 }
 
 .visuallyhidden {
@@ -29,7 +34,7 @@
 .visuallyhidden.focusable:focus {
 	clip: auto;
 	height: auto;
-	margin: 0;
+				margin: 0;
 	overflow: visible;
 	position: static;
 	width: auto;
@@ -54,49 +59,49 @@
 }
 
 // Media Queries
-@mixin bp($point, $min: false, $max: false) {
-	@if $point == desktop {
-		@media (min-width: 1200px) { @content; }
-	}
-	@else if $point == tablet {
-		@media(min-width: 630px) and (max-width: 1200px) { @content; }
-	}
-	@else if $point == mediumLandscape{
-		@media (min-width: 630px) and (max-width: 1075px) and (orientation: landscape) { @content; }
-	}
-	@else if $point == phone {
-		@media (max-width: 630px)  { @content; }
-	}
-	@else if $point == phone-tablet {
-		@media (max-width: 1200px)  { @content; }
-	}
-	@else if $point == smallLandscape{
-		@media (max-width: 630px) and (orientation: landscape) { @content; }
-	}
-	@else if $point == custom{
-		@if $min >=1 and $max != false{
-			@if(unitless($min) == true){
-				$min: #{$min}px;
-			}
-			@if(unitless($max) == true){
-				$max: #{$max}px;
-			}
-			@media (min-width: $min) and (max-width: $max) { @content; }
-		}
-		@if $min != false and $max == false{
-			@if(unitless($min) == true){
-				$min: #{$min}px;
-			}
-			@media (min-width: $min) { @content; }
-		}
-		@if $min == 0 and $max != false{
-			@if(unitless($max) == true){
-				$max: #{$max}px;
-			}
-			@media (max-width: $max ) { @content; }
-		}
-	}
-}
+// @mixin bp($point, $min: false, $max: false) {
+// 	@if $point == desktop {
+// 		@media (min-width: 1200px) { @content; }
+// 	}
+// 	@else if $point == tablet {
+// 		@media(min-width: 630px) and (max-width: 1200px) { @content; }
+// 	}
+// 	@else if $point == mediumLandscape{
+// 		@media (min-width: 630px) and (max-width: 1075px) and (orientation: landscape) { @content; }
+// 	}
+// 	@else if $point == phone {
+// 		@media (max-width: 630px)  { @content; }
+// 	}
+// 	@else if $point == phone-tablet {
+// 		@media (max-width: 1200px)  { @content; }
+// 	}
+// 	@else if $point == smallLandscape{
+// 		@media (max-width: 630px) and (orientation: landscape) { @content; }
+// 	}
+// 	@else if $point == custom{
+// 		@if $min >=1 and $max != false{
+// 			@if(unitless($min) == true){
+// 				$min: #{$min}px;
+// 			}
+// 			@if(unitless($max) == true){
+// 				$max: #{$max}px;
+// 			}
+// 			@media (min-width: $min) and (max-width: $max) { @content; }
+// 		}
+// 		@if $min != false and $max == false{
+// 			@if(unitless($min) == true){
+// 				$min: #{$min}px;
+// 			}
+// 			@media (min-width: $min) { @content; }
+// 		}
+// 		@if $min == 0 and $max != false{
+// 			@if(unitless($max) == true){
+// 				$max: #{$max}px;
+// 			}
+// 			@media (max-width: $max ) { @content; }
+// 		}
+// 	}
+// }
 
 
 @mixin placeholder {
