--- a/source/css/modules/alumni_LR_hover.scss
+++ b/source/css/modules/alumni_LR_hover.scss
@@ -1,4 +1,6 @@
 .Alumni_LR {
+	overflow: visible;
+	margin-bottom: 5em;
 	.leader {
 		width: 25%;
 		min-height: 40em;
@@ -33,25 +35,26 @@
 
 		}
 
+		// h3 {
+		// 	margin-top: 0;
+		// 	// margin-bottom: 5%;
+		// 	// font-size: 12px;
+		// 	letter-spacing: .1em;
+		// 	font-weight: bold;
+		// 	// letter-spacing: 2px;
+		// 	// line-height: 2em;
+		//
+		// 	text-transform: uppercase;
+		// }
+
 		h3 {
-			margin-top: 0;
-			// margin-bottom: 5%;
-			// font-size: 12px;
-			letter-spacing: .1em;
-			// letter-spacing: 2px;
-			// line-height: 2em;
-
-			text-transform: uppercase;
-		}
-
-		h4 {
 			margin: 0;
 			line-height: 2em;
 			padding-top: 1em;
-			font-weight: 400;
+			font-weight: bold;
 			// font-size: 14px;
 			text-transform: uppercase;
-			letter-spacing: 0.05em;
+			letter-spacing: 0.1em;
 		}
 
 }
@@ -71,8 +74,8 @@
 	&:after {
 		content: "";
 		display: block;
-		width: 70%;
-		height: .1em;
+		width: 50%;
+		height: .2em;
 		background: white;
 		position: absolute;
 		bottom: 0%;
