--- a/source/css/modules/button.scss
+++ b/source/css/modules/button.scss
@@ -7,6 +7,9 @@
 	color: white;
 	background-color: black;
 	text-decoration: none;
+	display: inline-block;
+	margin: 1em auto;
+	// width: 15em;
 	text-transform: uppercase;
 
 	&-yellow {
