--- a/source/css/modules/headline.scss
+++ b/source/css/modules/headline.scss
@@ -1,24 +1,21 @@
 .headline {
-	border-bottom: 10px solid $gold;
+	// border-bottom: 10px solid $gold;
 	margin-bottom: 2em;
-		margin-top: 2em;
-
+	padding-bottom: 1em;
+position: relative;
+		@include line(30%,$gold,bottom);
 	h1 {
 		// font-size: 100px;
-		text-transform: uppercase;
-		// line-height: 1;
-		font-weight: 100;
-		// margin: 0;
-
-		// padding-bottom: 5%;
-	}
-
-	h2 {
-		// font-size: 60px;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		// line-height: 1;
 		// font-weight: 100;
-		margin: 0;
+		// margin: 0;
+		font-weight: bold;
+
+		// padding-bottom: 5%;
+		span{
+			text-transform: uppercase;
+		}
 
 	}
 }
