--- a/source/css/modules/icon_grid.scss
+++ b/source/css/modules/icon_grid.scss
@@ -1,29 +1,42 @@
 .icon-grid {
 
 	@extend .grid;
+	margin: 2.5em auto;
 	align-content: center;
+	figcaption{
+		@include mq($S){
+			// text-align: center;
+		}
+		@include mq($M){
+			text-align: left;
+		}
+	}
 
 .icon {
 	width: 50%;
+	position: relative;
 	@include bp(phone){
 		width: 100%;
 		padding: 0;
 	}
-	padding-right: 4em;
+	padding: 0 1em;
 	margin: 0;
 	// margin-right: 1em;
-	img.icon {
-		max-width: 100em;
-		min-width: 10em;
+	img.icon_img {
+		max-width: 5em;
+		min-width: 3em;
 		height: 4em;
 		margin: 2em 0;
 	}
 	h2 {
 		text-transform: uppercase;
+		letter-spacing: .1em;
 
 	}
 	a {
-		
+		position: absolute;
+		bottom: 0;
+
 	}
 
 	p {
