--- a/source/css/modules/info_box.scss
+++ b/source/css/modules/info_box.scss
@@ -8,25 +8,26 @@
 		&:first-of-type {
 			background: $grey1;
 
-			h2 span {
-				color: $gold;
-			}
+			// h2 span {
+			// 	color: $gold;
+			// }
 		}
 
 		&:last-of-type {
 			background: $gold;
 
-			h2 span {
-				color: $grey1;
-			}
+			// h2 span {
+			// 	color: $grey1;
+			// }
 		}
 	}
 
 	h2 {
 		// font-size: 50px;
 		text-transform: uppercase;
+		font-weight: bold;
 		margin: 0;
-		font-weight: $light;
+		letter-spacing: .1em;
 
 		span {
 			// display: block;
@@ -37,7 +38,8 @@
 	p {
 		// font-size: 18px;
 		// line-height: 2;
-		margin: 2em 0;
+		width: 60%;
+		margin: 2em auto;
 	}
 
 	// a.btn-ghost {
