--- a/source/css/modules/part_of_process.scss
+++ b/source/css/modules/part_of_process.scss
@@ -3,16 +3,24 @@
 	color: white;
 	// padding-top:5%;
 // margin: 3em 0;
+.grid{
+	&:last-child{
+		padding-top: 2em;
+
+	}
+}
 	.col-1-2 {
 
-		&:last-child {
-			padding-left: 5%;
+		&:first-child {
+			padding-right: 5%;
+			// padding-bottom: 3em;
 		}
 	}
 
 	h2 {
-		// font-size: 50px;
 		margin: 0.5em 0;
+		font-weight: bold;
+
 
 		&:after {
 			content: "";
@@ -40,10 +48,16 @@ span{
 display: block;
 margin-bottom: .5em;
 font-size: 3em;
+font-weight: 400;
 }
 	}
 	.col-1-4 {
 	position: relative;
+	h1{
+		font-weight: bold;
+		letter-spacing: .1em;
+		// line-height: 1em;
+	}
 
 	&:last-child:after {
 		display: none;
