--- a/source/css/modules/quoteslider.scss
+++ b/source/css/modules/quoteslider.scss
@@ -3,10 +3,15 @@
   max-width: 80%;
   margin: 2em auto;}
 
+  .quote_img{
+    margin: 0 auto;
+    width: 5%;
+  }
+
 .slide-viewer {
     position: relative; /* needed for IE7 */
     overflow: hidden;
-    height: 16em;
+    height: 17em;
 	}
 
 .slide-group {
@@ -20,25 +25,32 @@
     width: 100%;
     height: 100%;
     display: none;
-		transition : .6s ease-in-out;
+		transition : .4s ease-in-out;
     position: absolute;
 		text-align: center;
 
 		h1{
-		letter-spacing: .2em;
+		letter-spacing: .05em;
 		line-height: 1.7em;
 		}
+    h2{
+      text-transform: uppercase;
+      font-weight: bold;
+      margin: 1em auto;
+      letter-spacing: 0.1em;
+    }
 	 }
 
 .slide:first-child {
     display: block;
 		// transition : .6s ease-in-out;
-		transform: translate3d(0, 0, 0);
+		// transform: translate3d(0, 0, 0);
 	}
 
 
 /********** BUTTONS **********/
 .slide-buttons {
+  margin: 2em;
   text-align: center;
 
 }
