--- a/source/css/modules/this_is_XULA.scss
+++ b/source/css/modules/this_is_XULA.scss
@@ -1,20 +1,22 @@
 .this-is-xula {
+	margin: 3em auto;
 
 	.col-1-2 {
 		&:first-child{
-			padding-right: 2em;
-		h5 {
+
+		h2 {
+			line-height: 1.5em;
 
 		}
-		h6{
-			line-height: 2em;
-			font-weight: 300;
+		h3{
+			line-height: 1.8em;
+			font-weight: 400;
 			color: $grey3;
 		 }
 }
 		&:last-child {
 			padding-left: 2em;
-			padding-top: 5em;
+			padding-top: 3em;
 
 	}
 }
