--- a/source/templates/_partials/_modules/find_your_future.hbs
+++ b/source/templates/_partials/_modules/find_your_future.hbs
@@ -1,4 +1,32 @@
-<section class="find_your_future grid container">
+<style>
+button.acd {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+button.acd.active, button.acd:hover {
+    background-color: #ddd;
+}
+
+div.Panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+}
+.contentp{
+	display: none;
+}
+</style>
+
+<section class="find_your_future grid container padding">
 
       {{>headline this.find-your-future}}
     <!-- {{>backgroundimage this.find-your-future.BackgroundImage}} -->
@@ -12,6 +40,41 @@
   </div>
 </div>
 
+
+    <div class="search">
+       <input type="text" class="searchbar" placeholder="search majors">
+       <button type="submit" class="searchbutton">
+         <i class="fa fa-search"></i>
+      </button>
+    </div>
+
+<button class="accordion">ALL AREAS OF INTEREST</button>
+<div class="panel grid">
+
+<div class="col-1-3">
+<h1 class="heading-7">BIOLOGICAL AND PUBLIC HEALTH SCIENCES</h1>
+<li>Department of Biology</li>
+<li>Department of Public Health Sciences</li>
+</div>
+<div class="col-1-3">
+<h1 class="heading-7">MATHEMATICS AND PHYSICAL SCIENCES</h1>
+<li>Department of Chemistry</li>
+<li>Department of Computer Science</li>
+<li>Department of Mathematics</li>
+<li>Department of Physics</li>
+</div>
+<div class="col-1-3">
+<h1 class="heading-7">FINE ARTS AND HUMANITIES</h1>
+<li>Department of Art</li>
+<li>Department of English</li>
+<li>Department of History</li>
+<li>Department of Languages</li>
+<li>Department of Music</li>
+<li>Department of Philosophy</li>
+<li>Department of Theology</li>
+</div>
+
+</div>
 
 
   {{>tile_grid tile_grid.Tile_Grid}}
