--- a/source/templates/_partials/_modules/nav.hbs
+++ b/source/templates/_partials/_modules/nav.hbs
@@ -20,13 +20,13 @@
     {{/each}}
   </ul>
 </nav> -->
-{{>search_wrapper}}
+
+ {{>search_wrapper}}
 {{>top_nav}}
-<header class="main-header" >
+<header class="main-header">
+  <img class ="main-header__logo" src="../images/logo/horizontal-logo-reverse.svg"/>
+ {{>main_nav}}
 
-
-
-		{{>main_nav}}
 {{>mobile_nav}}
 
 
