--- a/source/templates/_partials/_modules/search_wrapper.hbs
+++ b/source/templates/_partials/_modules/search_wrapper.hbs
@@ -1,7 +1,7 @@
 <div class="search-wrap">
-<div class="container">
+<!-- <div class="container"> -->
 		<form action="" method="" role="search">
 				<input id="search-bar" placeholder="Search our website&hellip;">
 			</form>
-	</div>
+	<!-- </div> -->
 </div>
