--- a/source/templates/_partials/_modules/top_nav.hbs
+++ b/source/templates/_partials/_modules/top_nav.hbs
@@ -1,6 +1,6 @@
 
 <header class="top-header">
-	 <div class="container">
+	 <!-- <div class="container"> -->
 				<div class="topnav-bar">
 					<nav>
 					<ul>
@@ -13,5 +13,5 @@
 				</ul>
 			</nav>
 				</div>
-		</div>
+		<!-- </div> -->
 </header>
